eks-yaml/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-js-app
  namespace: dev
spec:
  selector:
    matchLabels:
      app: node-js-app
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: node-js-app
    spec:
      containers:
      - name: node-js-app
        image: 378689032750.dkr.ecr.ap-south-1.amazonaws.com/test-app:3
        ports:
        - containerPort: 3000
        resources:
          limits:
            cpu: 100m
            memory: 150Mi
          requests:
            cpu: 50m
            memory: 100Mi
        livenessProbe:
          httpGet:
            path: /ping
            port: 3000
          initialDelaySeconds: 40
          periodSeconds: 15
          timeoutSeconds: 15
          failureThreshold: 5
        readinessProbe:
          httpGet:
            path: /ping
            port: 3000
          initialDelaySeconds: 40
          periodSeconds: 15
          timeoutSeconds: 15
          failureThreshold: 5
      restartPolicy: Always
