eks-yaml/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-js-app-service
  namespace: dev
spec:
  selector:
    app: node-js-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: NodePort
