eks-yaml/dev/nonprod-public-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 'test-nonprod-ing'
  namespace: dev
  labels:
    app: 'test-nonprod-public-ingress-new'
  annotations:
    alb.ingress.kubernetes.io/scheme: 'internet-facing'
    alb.ingress.kubernetes.io/target-type: 'ip'
    alb.ingress.kubernetes.io/subnets: subnet-0812c39b4b99a3161, subnet-0f91710425ffa41a9, subnet-07a032187a97433f8
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '3'
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '25'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '20'
spec:
  ingressClassName: alb
  defaultBackend:
    service:
      name: node-js-app-service
      port:
        number: 80
  rules:
  - host: "test.airstack.com"
    http:
      paths:
      - path: /ping
        pathType: Prefix
        backend:
          service:
            name: node-js-app-service
            port:
              number: 80
